tests/errors/undefined_var.py
# expect_error: NameError
print(x)
